[ADD] Pass High filtering for detrend

--- a/strategies/01_all_assets_mean_reversion/main.ipynb
+++ b/strategies/01_all_assets_mean_reversion/main.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,12 +294,157 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Detrend With Linear regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "def detrend_lin_reg(dic_sec : dict):\n",
+    "    ans = {}\n",
+    "\n",
+    "    for ticker, df in dic_sec.items():\n",
+    "        X = np.arange(len(df)).reshape(-1, 1)\n",
+    "        y = df[\"close\"].values\n",
+    "        model = LinearRegression().fit(X, y)\n",
+    "        trend = model.predict(X)\n",
+    "\n",
+    "        df[\"detrended\"] = df[\"close\"] - trend\n",
+    "        ans[ticker+'_lin_reg'] = df\n",
+    "#        pd.DataFrame.b\n",
+    "    return ans\n",
+    "\n",
+    "detrended_lin_reg = detrend_lin_reg(remaining_sec)\n",
+    "station_lin_reg = check_stationarity(detrended_lin_reg, 'detrended')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Detrend with pass-high"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Manually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def detrend_pass_high(dic_sec : dict):\n",
+    "    ans = {}\n",
+    "\n",
+    "    for ticker, df in dic_sec.items():\n",
+    "        df[\"trend\"] = df[\"close\"].rolling(window=50).mean()\n",
+    "        df[\"high_pass\"] = df[\"close\"] - df[\"trend\"]\n",
+    "        df['high_pass'] = df['high_pass'].bfill()\n",
+    "        ans[ticker+'_pass_high'] = df\n",
+    "#        pd.DataFrame.b\n",
+    "    return ans\n",
+    "\n",
+    "\n",
+    "detrended_high_pass = detrend_pass_high(remaining_sec)\n",
+    "station_high_pass = check_stationarity(detrended_high_pass, 'high_pass')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With Scipy (filtfilt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import signal\n",
+    "\n",
+    "def detrend_pass_high_scipy(dic_sec : dict):\n",
+    "    ans = {}\n",
+    "\n",
+    "    def filtre_passe_haut(x, fc, Fe):\n",
+    "        wc = fc / (Fe / 2)             # normalisation de la fréquence\n",
+    "        b, a = signal.butter(4, wc, 'high')\n",
+    "        y = signal.filtfilt(b, a, x)   # filtrage avant/arrière (pas de décalage)\n",
+    "        return y\n",
+    "    Fe = 1        # fréquence d'échantillonnage (1 point par unité de temps)\n",
+    "    fc = 1/50     # fréquence de coupure : on enlève les tendances plus lentes que 50 pas\n",
+    "\n",
+    "\n",
+    "    for ticker, df in dic_sec.items():\n",
+    "        df[\"high_pass\"] = filtre_passe_haut(df[\"close\"].values, fc, Fe)\n",
+    "        df['high_pass'] = df['high_pass'].bfill()\n",
+    "        ans[ticker+'_pass_high_scipy'] = df\n",
+    "#        pd.DataFrame.b\n",
+    "    return ans\n",
+    "\n",
+    "detrended_high_pass_scipy = detrend_pass_high_scipy(remaining_sec)\n",
+    "station_high_pass_scipy = check_stationarity(detrended_high_pass_scipy, 'high_pass')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With Scipy (lfilter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import signal\n",
+    "\n",
+    "def detrend_pass_high_scipy_left(dic_sec : dict):\n",
+    "    ans = {}\n",
+    "\n",
+    "    def filtre_passe_haut(x, fc, Fe):\n",
+    "        wc = fc / (Fe / 2)             # normalisation de la fréquence\n",
+    "        b, a = signal.butter(4, wc, 'high')\n",
+    "        y = signal.lfilter(b, a, x)   # filtrage avant/arrière (pas de décalage)\n",
+    "        return y\n",
+    "    Fe = 1        # fréquence d'échantillonnage (1 point par unité de temps)\n",
+    "    fc = 1/50     # fréquence de coupure : on enlève les tendances plus lentes que 50 pas\n",
+    "\n",
+    "\n",
+    "    for ticker, df in dic_sec.items():\n",
+    "        df[\"high_pass\"] = filtre_passe_haut(df[\"close\"].values, fc, Fe)\n",
+    "        df['high_pass'] = df['high_pass'].bfill()\n",
+    "        ans[ticker+'_pass_high_scipy_left'] = df\n",
+    "#        pd.DataFrame.b\n",
+    "    return ans\n",
+    "\n",
+    "detrended_high_pass_scipy_left = detrend_pass_high_scipy_left(remaining_sec)\n",
+    "station_high_pass_scipy_left = check_stationarity(detrended_high_pass_scipy_left, 'high_pass')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Mean Reversion appliying"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,6 +590,86 @@
    "outputs": [],
    "source": [
     "station_logs_strat = backtest_strat(station_logs,col=\"log_returns\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear regression stationary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "station_lin_reg_strat = backtest_strat(station_lin_reg,col=\"detrended\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pass High"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Manually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "station_pass_high_strat = backtest_strat(station_high_pass,col=\"high_pass\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With Scipy filtfilt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "station_pass_high_scipy_strat = backtest_strat(station_high_pass_scipy,col=\"high_pass\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With Scipy Lfilter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "station_pass_high_scipy_left_strat = backtest_strat(station_high_pass_scipy_left,col=\"high_pass\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "station_high_pass_scipy['AAVEETH_pass_high_scipy']['high_pass']"
    ]
   }
  ],
